added user entry

--- a/app/assets/javascripts/visitor/view.html
+++ b/app/assets/javascripts/visitor/view.html
@@ -1,5 +1,5 @@
 <div class="wrapper wrapper-content">
-    <div class="row">
+    <!-- <div class="row">
         <div class="col-lg-4">
             <div class="ibox">
                 <div class="ibox float-e-margins">
@@ -9,7 +9,7 @@
                    	<div>
                         <div class="ibox-content no-padding border-left-right text-center">
                             <div class="camera_wrapper">
-                            	<video width="300" height="300" autoplay></video>
+                            	<video id="video"autoplay></video>
                             </div>
                             <button class="btn btn-primary">CAPTURE</button>
                             <br>
@@ -75,5 +75,5 @@
                 </div>
             </div>
         </div>
-    </div>
+    </div> -->
 </div>
