--- a/app/assets/javascripts/user/create.html
+++ b/app/assets/javascripts/user/create.html
@@ -2,42 +2,30 @@
     <div class="ibox-title">
         <h5>Create User</h5>
         <div class="ibox-tools">
-            <a class="collapse-link">
-                <i class="fa fa-chevron-up"></i>
-            </a>
-            <a class="dropdown-toggle" data-toggle="dropdown" href="#">
-                <i class="fa fa-wrench"></i>
-            </a>
-            <ul class="dropdown-menu dropdown-user">
-                <li><a href="#">Config option 1</a>
-                </li>
-                <li><a href="#">Config option 2</a>
-                </li>
-            </ul>
-            <a class="close-link">
+            <a ui-sref="index.user" class="close-link">
                 <i class="fa fa-times"></i>
             </a>
         </div>
     </div>
     <div class="ibox-content">
-    	<form>
+    	<form ng-submit="user.create(user.data)">
 	        <div class="row">
 	        	<div class="col-md-4">
 	        		<div class="form-group">
 	        			<label>First Name</label>
-	        			<input type="text" class="form-control" required/>
+	        			<input type="text" class="form-control" ng-model="user.data.fname" />
 	        		</div>
 	        	</div>
 	        	<div class="col-md-4">
 	        		<div class="form-group">
 	        			<label>Last Name</label>
-	        			<input type="text" class="form-control" required/>
+	        			<input type="text" class="form-control" ng-model="user.data.lname" required/>
 	        		</div>
 	        	</div>
 	        	<div class="col-md-4">
 	        		<div class="form-group">
 	        			<label>Middle Name</label>
-	        			<input type="text" class="form-control" required/>
+	        			<input type="text" class="form-control" ng-model="user.data.mname" required/>
 	        		</div>
 	        	</div>
 	        </div>
@@ -46,19 +34,19 @@
 	        	<div class="col-md-4">
 	        		<div class="form-group">
 	        			<label>Email Address</label>
-	        			<input type="email" class="form-control" required/>
+	        			<input type="email" class="form-control" ng-model="user.data.email" required/>
 	        		</div>
 	        	</div>
 	        	<div class="col-md-4">
 	        		<div class="form-group">
 	        			<label>Password</label>
-	        			<input type="password" class="form-control" required/>
+	        			<input type="password" class="form-control" ng-model="user.data.password" required/>
 	        		</div>
 	        	</div>
 	        	<div class="col-md-4">
 	        		<div class="form-group">
 	        			<label>Confirm Password</label>
-	        			<input type="password" class="form-control" required/>
+	        			<input type="password" class="form-control" ng-model="user.data.password1" required/>
 	        		</div>
 	        	</div>
 	        </div>
