--- a/app/assets/javascripts/shared/header/view.html
+++ b/app/assets/javascripts/shared/header/view.html
@@ -2,14 +2,14 @@
 	<nav class="navbar navbar-static-top  " role="navigation" style="margin-bottom: 0">
 		<div class="navbar-header">
     		<!-- <a class="navbar-minimalize minimalize-styl-2 btn btn-primary " href="#"><i class="fa fa-bars"></i> </a> -->
-            <p class="navbar-minimalize minimalize-styl-2">ISPINA ADMIN</p>
+            <p class="navbar-minimalize minimalize-styl-2">PROJECT BRIEF</p>
 		</div>
     	<ul class="nav navbar-top-links navbar-right">
-            <li class="dropdown">
+            <!-- <li class="dropdown">
                 <a class="dropdown-toggle count-info" data-toggle="dropdown" href="#">
                     <i class="fa fa-envelope"></i>  <span class="label label-warning">16</span>
                 </a>
-            </li>
+            </li> -->
             <li class="dropdown">
                 <a class="dropdown-toggle count-info" data-toggle="dropdown" href="#">
                     <i class="fa fa-bell"></i>  <span class="label label-primary">8</span>
