--- a/app/assets/javascripts/shared/sidenav/view.html
+++ b/app/assets/javascripts/shared/sidenav/view.html
@@ -28,7 +28,7 @@
                 </a>
             </li>
             <li>
-                <a>
+                <a ui-sref="index.company">
                     <i class="fa fa-th-large"></i> 
                     <span class="nav-label">Companies</span> 
                     <span class="fa arrow"></span>
