--- a/app/assets/javascripts/user/view.html
+++ b/app/assets/javascripts/user/view.html
@@ -8,9 +8,21 @@
                         <div class="space-25"></div>
                         <h5>USER TYPES</h5>
                         <ul class="folder-list m-b-md" style="padding: 0">
-                            <li ng-repeat="a in [1,2]">
+                            <li>
                             	<a> 
-                            		<i class="fa fa-database "></i> Admin 
+                            		<i class="fa fa-th "></i> Administrators 
+                            		<span class="label label-warning pull-right">{{a}}</span> 
+                            	</a>
+                            </li>
+                            <li>
+                            	<a> 
+                            		<i class="fa fa-th "></i> Receptionist 
+                            		<span class="label label-warning pull-right">{{a}}</span> 
+                            	</a>
+                            </li>
+                            <li>
+                            	<a> 
+                            		<i class="fa fa-th "></i> User 
                             		<span class="label label-warning pull-right">{{a}}</span> 
                             	</a>
                             </li>
@@ -19,14 +31,13 @@
                         <ul class="category-list" style="padding: 0">
                             <li><a href="#"> <i class="fa fa-circle text-navy"></i> Approved</a></li>
                             <li><a href="#"> <i class="fa fa-circle text-danger"></i> Pendings</a></li>
-                            <li><a href="#"> <i class="fa fa-circle text-warning"></i> Clients</a></li>
                         </ul>
 
                         <h5 class="tag-title">Tags</h5>
                         <ul class="tag-list" style="padding: 0">
-                            <li><a href=""><i class="fa fa-tag"></i> Family</a></li>
-                            <li><a href=""><i class="fa fa-tag"></i> Family</a></li>
-                            <li><a href=""><i class="fa fa-tag"></i> Family</a></li>
+                            <li><a href=""><i class="fa fa-tag"></i> Staff</a></li>
+                            <li><a href=""><i class="fa fa-tag"></i> Admin</a></li>
+                            <li><a href=""><i class="fa fa-tag"></i> Chicks</a></li>
                         </ul>
                         <div class="clearfix"></div>
                     </div>
@@ -48,7 +59,7 @@
                         </div>
                     </form>
                     <h2>
-                        User (16)
+                        User ({{user.collections.length}})
                     </h2>
                     <div class="mail-tools tooltip-demo m-t-md">
                         <div class="btn-group pull-right">
@@ -57,28 +68,23 @@
 
                         </div>
                         <button class="btn btn-white btn-sm" data-toggle="tooltip" data-placement="left" title="Refresh inbox"><i class="fa fa-refresh"></i> Refresh</button>
-                        <button class="btn btn-white btn-sm" data-toggle="tooltip" data-placement="top" title="Mark as read"><i class="fa fa-eye"></i> </button>
-                        <button class="btn btn-white btn-sm" data-toggle="tooltip" data-placement="top" title="Mark as important"><i class="fa fa-exclamation"></i> </button>
-                        <button class="btn btn-white btn-sm" data-toggle="tooltip" data-placement="top" title="Move to trash"><i class="fa fa-trash-o"></i> </button>
-
+                        
                     </div>
                 </div>
                 <div class="mail-box">
     				<table class="table table-hover table-mail">
     	                <tbody>
-    	               		<tr class="unread">
-    		                    
-    		                    <td class="mail-ontact"><a href="mail_detail.html">Jack Nowak</a></td>
-    		                    <td class="mail-subject"><a href="mail_detail.html">Aldus PageMaker including versions of Lorem Ipsum.</a></td>
-    		                    <td class=""></td>
-    		                    <td class="text-right mail-date">8.22 PM</td>
+    	               		<tr class="read" ng-repeat="user in user.collections">
+    		                    <td>{{user.id}}</td>
+    		                    <td class="mail-contact"><a href="mail_detail.html">{{user.name}}</a></td>
+    		                    <td class="mail-subject"><a href="mail_detail.html">{{user.created_at | date:'MMMM dd, yyyy hh:mm:ss a'}}</a></td>
     		                </tr>
-    		                <tr class="read">
+    		                <!-- <tr class="read">
     		                    <td class="mail-ontact"><a href="mail_detail.html">Facebook</a> <span class="label label-warning pull-right">Clients</span> </td>
     		                    <td class="mail-subject"><a href="mail_detail.html">Many desktop publishing packages and web page editors.</a></td>
     		                    <td class=""></td>
     		                    <td class="text-right mail-date">Jan 16</td>
-    		                </tr>
+    		                </tr> -->
     	                </tbody>
                     </table>
                 </div>
