added company create

--- a/app/assets/javascripts/company/view.html
+++ b/app/assets/javascripts/company/view.html
@@ -37,7 +37,7 @@
                         </div>
                     </form>
                     <h2>
-                        Companies ({{user.collections.length}})
+                        Companies ({{company.collections.length}})
                     </h2>
                     <div class="mail-tools tooltip-demo m-t-md">
                         <div class="btn-group pull-right">
@@ -52,10 +52,10 @@
                 <div class="mail-box">
     				<table class="table table-hover table-mail">
     	                <tbody>
-    	               		<tr class="read" ng-repeat="user in user.collections">
-    		                    <td>{{user.id}}</td>
-    		                    <td class="mail-contact"><a href="mail_detail.html">{{user.name}}</a></td>
-    		                    <td class="mail-subject"><a href="mail_detail.html">{{user.created_at | date:'MMMM dd, yyyy hh:mm:ss a'}}</a></td>
+    	               		<tr class="read" ng-repeat="com in company.collections">
+    		                    <td>{{com.id}}</td>
+    		                    <td class="mail-contact"><a href="mail_detail.html">{{com.name}}</a></td>
+    		                    <td class="mail-subject"><a href="mail_detail.html">{{com.created_at | date:'MMMM dd, yyyy hh:mm:ss a'}}</a></td>
     		                </tr>
     		                <!-- <tr class="read">
     		                    <td class="mail-ontact"><a href="mail_detail.html">Facebook</a> <span class="label label-warning pull-right">Clients</span> </td>
