--- a/app/assets/javascripts/company/create/view.html
+++ b/app/assets/javascripts/company/create/view.html
@@ -8,12 +8,12 @@
         </div>
     </div>
     <div class="ibox-content">
-    	<form ng-submit="company.create(company.data)">
+    	<form ng-submit="company_create.create(company_create.data)">
             <div class="row">
                 <div class="col-md-12">
 	        		<div class="form-group">
 	        			<label>Company Name</label>
-	        			<input type="text" class="form-control" ng-model="company.data.name" />
+	        			<input type="text" class="form-control" ng-model="company_create.data.name" />
 	        		</div>
 	        	</div>
             </div>
@@ -21,19 +21,19 @@
 	        	<div class="col-md-4">
 	        		<div class="form-group">
 	        			<label>Unit No.</label>
-	        			<input type="text" class="form-control" ng-model="company.data.unit_number" />
+	        			<input type="text" class="form-control" ng-model="company_create.data.unit_number" />
 	        		</div>
 	        	</div>
 	        	<div class="col-md-4">
 	        		<div class="form-group">
 	        			<label>Floor Number</label>
-	        			<input type="number" class="form-control" ng-model="company.data.floor" required/>
+	        			<input type="number" class="form-control" ng-model="company_create.data.floor" required/>
 	        		</div>
 	        	</div>
 	        	<div class="col-md-4">
 	        		<div class="form-group">
 	        			<label>website</label>
-	        			<input type="text" class="form-control" ng-model="company.data.website"/>
+	        			<input type="text" class="form-control" ng-model="company_create.data.website"/>
 	        		</div>
 	        	</div>
 	        </div>
@@ -42,7 +42,7 @@
 	        	<div class="col-md-12">
 	        		<div class="form-group">
                         <label for="">Company Description</label>
-	        			<textarea class="form-control" cols="30" rows="10" ng-model="company.data.description"></textarea>
+	        			<textarea class="form-control" cols="30" rows="10" ng-model="company_create.data.description"></textarea>
 	        		</div>
 	        	</div>
             </div>
@@ -53,9 +53,9 @@
 						<div class="row">
 							<div class="col-md-5">
 								<div class="input-group span4">
-									<input type="text" class="form-control input-sm" ng-model="company.temp.tag" placeholder="Tags">
+									<input type="text" class="form-control input-sm" ng-model="company_create.temp.tag" placeholder="Tags">
 									<div class="input-group-btn">
-										<button type="submit" class="btn btn-sm btn-info" ng-click="company.addtag(company.temp.tag)">
+										<button type="button" class="btn btn-sm btn-info" ng-click="company_create.addtag(company_create.temp.tag)">
 											Add Tags
 										</button>
 									</div>
@@ -63,7 +63,7 @@
 							</div>
 						</div>
 						<ul class="tag-list" style="padding: 0">
-							<li ng-repeat="a in company.data.tags track by $index"><a ng-click="company.removeTag($index)"><i class="fa fa-tag"></i>{{a}}</a></li>
+							<li ng-repeat="a in company_create.data.tags track by $index"><a ng-click="company_create.removeTag($index)"><i class="fa fa-tag"></i>{{a}}</a></li>
 						</ul>
 						
                     </div>
