--- a/app/assets/javascripts/identification/index/view.html
+++ b/app/assets/javascripts/identification/index/view.html
@@ -38,17 +38,20 @@
                 <div class="mail-box">
     				<table class="table table-hover table-mail">
     	                <tbody>
-    	               		<tr ui-sref="index.company.detail({id:com.id})" class="read" ng-repeat="com in company.collections">
-    		                    <td>{{com.id}}</td>
-    		                    <td class="mail-contact"><a href="mail_detail.html">{{com.name}}</a></td>
-    		                    <td class="mail-subject"><a href="mail_detail.html">{{com.created_at | date:'MMMM dd, yyyy hh:mm:ss a'}}</a></td>
+                            <tr class="unread">
+                                <td>ID</td>
+                                <td>Code</td>
+                                <td>Status</td>
+                                <td>Availability</td>
+                                <td>Date Created</td>
+                            </tr>
+    	               		<tr class="read" ng-repeat="a in identification.ids">
+    		                    <td>{{a.id}}</td>
+                                <td class="mail-contact"><a href="mail_detail.html">{{a.code}}</a></td>
+                                <td class="mail-contact"><a href="mail_detail.html">{{a.status}}</a></td>
+    		                    <td class="mail-contact"><a href="mail_detail.html">{{(a.in_use) ? "No" : "Yes" }}</a></td>
+    		                    <td class="mail-subject"><a href="mail_detail.html">{{a.created_at | date:'MMMM dd, yyyy hh:mm:ss a'}}</a></td>
     		                </tr>
-    		                <!-- <tr class="read">
-    		                    <td class="mail-ontact"><a href="mail_detail.html">Facebook</a> <span class="label label-warning pull-right">Clients</span> </td>
-    		                    <td class="mail-subject"><a href="mail_detail.html">Many desktop publishing packages and web page editors.</a></td>
-    		                    <td class=""></td>
-    		                    <td class="text-right mail-date">Jan 16</td>
-    		                </tr> -->
     	                </tbody>
                     </table>
                 </div>
