--- a/app/assets/javascripts/company/preview/view.html
+++ b/app/assets/javascripts/company/preview/view.html
@@ -143,7 +143,7 @@
       			<input type="text" ng-model="company_view.staff.mname" class="form-control"></input>
       		</div>
       		<div class="form-group">
-      			<label class="control-label">Contact Number:</label>
+      			<label class="control-label">Contact Number: <small>must begin 63 not 0 e.g 63915 000 0000</small></label>
       			<input type="text" ng-model="company_view.staff.contact" class="form-control"></input>
       		</div>
       </div>
