--- a/app/assets/javascripts/company/preview/view.html
+++ b/app/assets/javascripts/company/preview/view.html
@@ -62,7 +62,7 @@
                                 
                                 <td class="mail-subject">{{a.name}}</td>
                                 <td class="mail-contact">
-                                    {{a.name}}
+                                    {{a.position}}
                                 </td>
                                 <td class="mail-contact">
                                     {{a.contact}}
