--- a/app/assets/javascripts/facility/index/view.html
+++ b/app/assets/javascripts/facility/index/view.html
@@ -7,17 +7,9 @@
                     	<a data-toggle="modal" data-target="#createFacility" class="btn btn-primary btn-xs pull-right" >Add Facility</a>
                     </div>
                     <h2>
-                        Facilities / Building
+                        <i class="fa fa-building"></i> Facilities / Building
                     </h2>
-                    <div class="mail-tools tooltip-demo m-t-md">
-                        <div class="btn-group pull-right">
-                            <button class="btn btn-white btn-sm"><i class="fa fa-arrow-left"></i></button>
-                            <button class="btn btn-white btn-sm"><i class="fa fa-arrow-right"></i></button>
-
-                        </div>
-                        <button ng-click="company.loadCompany()" class="btn btn-white btn-sm" data-toggle="tooltip" data-placement="left" title="Refresh inbox"><i class="fa fa-refresh"></i> Refresh</button>
-                        
-                    </div>
+                    
                 </div>
                 <div class="mail-box">
     				<table class="table table-hover table-mail">
