--- a/app/assets/javascripts/shared/header/view.html
+++ b/app/assets/javascripts/shared/header/view.html
@@ -18,7 +18,7 @@
 
 
             <li>
-                <a href="login.html">
+                <a ng-click="$ctrl.logout()">
                     <i class="fa fa-sign-out"></i> Log out
                 </a>
             </li>
