--- a/app/assets/javascripts/shared/sidenav/view.html
+++ b/app/assets/javascripts/shared/sidenav/view.html
@@ -9,9 +9,9 @@
                     <a data-toggle="dropdown" class="dropdown-toggle" href="#">
                         <span class="clear">
                         	<span class="block m-t-xs">
-                        	<strong class="font-bold">Ramel Cabug-os</strong>
+                        	<strong class="font-bold">{{$ctrl.name}}</strong>
                          	</span>
-                         	<span class="text-muted text-xs block">Administrator</span>
+                         	<span class="text-muted text-xs block">{{$ctrl.role.name}}</span>
                         </span>
                     </a>
 
