--- a/app/assets/javascripts/company/index/view.html
+++ b/app/assets/javascripts/company/index/view.html
@@ -62,14 +62,14 @@
     	                <tbody>
                         <tr class="unread" >
     		                    <td>ID</td>
-    		                    <td class="mail-contact"><a href="mail_detail.html">Company</a></td>
+    		                    <td class="mail-contact"><a>Company</a></td>
                             <td>Facility</td>
-    		                    <td class="mail-subject"><a href="mail_detail.html">Date Created</a></td>
+    		                    <td class="mail-subject"><a>Date Created</a></td>
                             <td></td>
     		                </tr>
     	               		<tr class="read" ng-repeat="com in company.collections">
     		                    <td>{{com.id}}</td>
-    		                    <td class="mail-contact"><a href="mail_detail.html">{{com.name}}</a></td>
+    		                    <td class="mail-contact"><a>{{com.name}}</a></td>
                             <td><small class="label label-primary">
                                 {{com.facility}}
                             </small>
@@ -77,6 +77,7 @@
     		                    <td class="mail-subject"><a>{{com.created_at | date:'MMMM dd, yyyy hh:mm:ss a'}}</a></td>
                             <td class="text-right">
                               <button type="button" class="btn btn-primary btn-xs" ui-sref="index.company.detail({id:com.id})" >View</button>
+                              <button type="button" class="btn btn-info btn-xs" ng-click="company.edit(com.id)">Edit</button>
                               <button type="button" class="btn btn-danger btn-xs" ng-click="company.remove(com.id, $index)">Delete</button>
                             </td>
     		                </tr>
@@ -131,7 +132,7 @@
                 <div class="col-md-4">
                     <div class="form-group">
                         <label>Floor Number</label>
-                        <input type="number" class="form-control" ng-model="company.data.floor" required/>
+                        <input type="text" class="form-control" ng-model="company.data.floor" required/>
                     </div>
                 </div>
                 <div class="col-md-4">
@@ -150,7 +151,7 @@
                     </div>
                 </div>
             </div>
-            <div class="row">
+            <!-- <div class="row">
                 <div class="col-md-12">
                     <div class="form-group">
                         <label for="">Tags</label>
@@ -173,13 +174,14 @@
                     </div>
 
                 </div>
-            </div>
+            </div> -->
 
 
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-        <button type="submit" class="btn btn-success">Save</button>
+        <button ng-if="company.mode=='create'" type="submit" class="btn btn-success">Save</button>
+        <a class="btn btn-success" ng-if="company.mode=='edit'" ng-click="company.update()">Update</a>
       </div>
       </form>
     </form>
