--- a/app/assets/javascripts/company/index/view.html
+++ b/app/assets/javascripts/company/index/view.html
@@ -33,9 +33,9 @@
             <div ui-view>
                 <div class="mail-box-header">
 
-                    <form method="get" action="index.html" class="pull-right mail-search">
+                    <form ng-submit="company.search(company.temp.str)"  class="pull-right mail-search">
                         <div class="input-group">
-                            <input type="text" class="form-control input-sm" name="search" placeholder="Search Company">
+                            <input type="text" ng-model="company.temp.str" class="form-control input-sm" name="search" placeholder="Search Company">
                             <div class="input-group-btn">
                                 <button type="submit" class="btn btn-sm btn-primary">
                                     Search
@@ -47,15 +47,7 @@
                         Companies ({{company.collections.length}})
 
                     </h2>
-                    <div class="mail-tools tooltip-demo m-t-md">
-                        <div class="btn-group pull-right">
-                            <button class="btn btn-white btn-sm"><i class="fa fa-arrow-left"></i></button>
-                            <button class="btn btn-white btn-sm"><i class="fa fa-arrow-right"></i></button>
-
-                        </div>
-                        <button ng-click="company.loadCompany()" class="btn btn-white btn-sm" data-toggle="tooltip" data-placement="left" title="Refresh inbox"><i class="fa fa-refresh"></i> Refresh</button>
-
-                    </div>
+                    
                 </div>
                 <div class="mail-box">
     				<table class="table table-hover table-mail">
