--- a/app/assets/javascripts/company/index/view.html
+++ b/app/assets/javascripts/company/index/view.html
@@ -47,7 +47,7 @@
                         Companies ({{company.collections.length}})
 
                     </h2>
-                    
+
                 </div>
                 <div class="mail-box">
     				<table class="table table-hover table-mail">
@@ -124,7 +124,7 @@
                 <div class="col-md-4">
                     <div class="form-group">
                         <label>Floor Number</label>
-                        <input type="text" class="form-control" ng-model="company.data.floor" required/>
+                        <input type="number" min="1" max="1000" class="form-control" ng-model="company.data.floor" required/>
                     </div>
                 </div>
                 <div class="col-md-4">
