--- a/app/assets/javascripts/visitor/index/view.html
+++ b/app/assets/javascripts/visitor/index/view.html
@@ -68,7 +68,7 @@
     		                    <td class="mail-contact">Status</td>
     		                    <td class="mail-contact">Duration</td>
     		                </tr>
-                        <tr class="read" ng-repeat="a in visitor.lists">
+                        <tr ng-click="visitor.info(a.visitor_id)" class="read" ng-repeat="a in visitor.lists">
     		                    <td>{{a.profile}}</td>
     		                    <td class="mail-contact">{{a.company}}</td>
     		                    <td class="mail-contact">{{a.purpose}}</td>
@@ -83,4 +83,43 @@
                 </div>
    		</div>
    	</div>
+</div>
+
+<div class="modal fade" id="visitorInfo" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+    <form ng-submit="user.create(user.modal)">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+        <h4 class="modal-title" id="myModalLabel">Visitor Information</h4>
+      </div>
+      <div class="modal-body text-center">
+        <img class="img" ng-src="./secret_upload/{{visitor.modal.info.image}}" alt="">
+        <h1>{{visitor.modal.info.fullname}}</h1>
+        <hr>
+        <table class="table table-bordered">
+          <tr>
+            <th colspan="4">History</th>
+          </tr>
+          <tr>
+            <th>Company</th>
+            <th>Staff</th>
+            <th>Purpose</th>
+            <th>Date</th>
+          </tr>
+          <tr ng-repeat="a in visitor.modal.info.log">
+            <td>{{a.company}}</td>
+            <td>{{a.staff}}</td>
+            <td>{{a.purpose}}</td>
+            <td>{{a.created_at | date:'MMMM dd, yyyy'}}</td>
+          </tr>
+        </table>
+      </div>
+      <div class="modal-footer">
+        <a type="button" class="btn btn-default" data-dismiss="modal">Close</a>
+        <button type="submit" class="btn btn-success">Save</button>
+      </div>
+    </form>
+    </div>
+  </div>
 </div>
