--- a/app/assets/javascripts/user/index/view.html
+++ b/app/assets/javascripts/user/index/view.html
@@ -1,6 +1,6 @@
 <div class="wrapper wrapper-content">
     <div class="row">
-        <div class="col-lg-3">
+        <div class="col-sm-3">
             <div class="ibox">
                 <div class="ibox-content mailbox-content">
                     <div class="file-manager">
@@ -21,7 +21,7 @@
                             <li ng-repeat="adm in user.data.facilities">
                                 <a>
                                     <i class="fa fa-building"></i> {{adm.name}}
-                                    <span class="label label-warning pull-right">{{1}}</span> 
+                                    <span class="label label-warning pull-right">{{1}}</span>
                                 </a>
                             </li>
 
@@ -36,7 +36,7 @@
                 </div>
             </div>
         </div>
-        <div class="col-lg-9 animated fadeInRight">
+        <div class="col-sm-9 animated fadeInRight">
             <div ui-view>
                 <div class="mail-box-header">
                     <form class="pull-right mail-search">
