--- a/app/assets/javascripts/company/index/view.html
+++ b/app/assets/javascripts/company/index/view.html
@@ -1,6 +1,6 @@
 <div class="wrapper wrapper-content">
     <div class="row">
-        <div class="col-lg-3">
+        <div class="col-sm-3">
             <div class="ibox">
                 <div class="ibox-content mailbox-content">
                     <div class="file-manager">
@@ -29,7 +29,7 @@
                 </div>
             </div>
         </div>
-        <div class="col-lg-9 animated fadeInRight">
+        <div class="col-sm-9 animated fadeInRight">
             <div ui-view>
                 <div class="mail-box-header">
 
