--- a/app/assets/javascripts/shared/header/view.html
+++ b/app/assets/javascripts/shared/header/view.html
@@ -1,7 +1,8 @@
 <div class="row border-bottom">
 	<nav class="navbar navbar-static-top  " role="navigation" style="margin-bottom: 0">
 		<div class="navbar-header">
-    		<!-- <a class="navbar-minimalize minimalize-styl-2 btn btn-primary " href="#"><i class="fa fa-bars"></i> </a> -->
+    		<a class="navbar-minimalize minimalize-styl-2 btn btn-primary "
+				><i class="fa fa-bars"></i> </a>
             <p class="navbar-minimalize minimalize-styl-2">PROJECT BRIEF</p>
 		</div>
     	<ul class="nav navbar-top-links navbar-right">
