--- a/app/assets/javascripts/visitor/index/view.html
+++ b/app/assets/javascripts/visitor/index/view.html
@@ -1,17 +1,19 @@
 <div class="wrapper wrapper-content">
     <div class="row">
-        <div class="col-lg-3">
+
+        <div class="col-sm-3">
           <div class="ibox float-e-margins">
               <div class="ibox-title">
                   <span class="label label-success pull-right">Today</span>
-                  <h5>Total Visitors</h5>
+                  <h5>Visitors</h5>
               </div>
               <div class="ibox-content">
                   <h1 class="no-margins">{{visitor.data.total_visitors_today | number}}</h1>
               </div>
           </div>
         </div>
-        <div class="col-lg-3">
+
+        <div class="col-sm-3">
           <div class="ibox float-e-margins">
               <div class="ibox-title">
                   <span class="label label-success pull-right">Today</span>
@@ -22,7 +24,8 @@
               </div>
           </div>
         </div>
-        <div class="col-lg-3">
+
+        <div class="col-sm-3">
           <div class="ibox float-e-margins">
               <div class="ibox-title">
                   <span class="label label-success pull-right">Today</span>
@@ -33,7 +36,8 @@
               </div>
           </div>
         </div>
-        <div class="col-lg-3">
+
+        <div class="col-sm-3">
           <div class="ibox float-e-margins">
               <div class="ibox-title">
                   <span class="label label-success pull-right">ALL</span>
@@ -44,6 +48,7 @@
               </div>
           </div>
         </div>
+
     </div>
     <div class="row">
    		<div class="col-md-12">
