--- a/app/assets/javascripts/visitor_kiosk/view.html
+++ b/app/assets/javascripts/visitor_kiosk/view.html
@@ -12,13 +12,13 @@
             <div style="font-size:50px;padding:10px">Enter Visitors Name</div>
             <form class="m-t" role="form" ng-submit="search">
                 <div class="form-group">
-                    <input type="text" style="color:#000;padding:30px;font-size:30px" class="form-control" required="">
+                    <input type="text" style="color:#000;padding:30px;font-size:30px" class="form-control" ng-model="kiosk.str" required="">
                 </div>
 
 
                 <div class="row">
                   <div class="col-sm-4">
-                      <button type="button" style="padding:20px;font-size:20px" class="btn btn-primary block full-width">Find</button>
+                      <button type="button" style="padding:20px;font-size:20px" class="btn btn-primary block full-width" ng-click="kiosk.find(kiosk.str)">Find</button>
                   </div>
                   <div class="col-sm-4">
                       <a type="button" style="padding:20px;font-size:20px" ng-click="kiosk.step = 2" class="btn btn-primary block full-width">New</a>
