--- a/app/assets/javascripts/visitor_kiosk/view.html
+++ b/app/assets/javascripts/visitor_kiosk/view.html
@@ -24,7 +24,7 @@
                       <a type="button" style="padding:20px;font-size:20px" ng-click="kiosk.step = 2" class="btn btn-primary block full-width">New</a>
                   </div>
                   <div class="col-sm-4">
-                      <a type="button" style="padding:20px;font-size:20px" ng-click="kiosk.visitorLogout()" class="btn btn-danger block full-width">Logout</a>
+                      <a type="button" style="padding:20px;font-size:20px" ng-click="kiosk.visitorLogout()" class="btn btn-danger block full-width">Log Out</a>
                   </div>
                 </div>
             </form>
@@ -112,7 +112,7 @@
                 <button
                     class="btn btn-primary"
                     style="padding:20px;font-size:20px;width:200px"
-                    ng-click="kiosk.loginVisitor()">Login Visitor
+                    ng-click="kiosk.loginVisitor()">Log In Visitor
                 </button>
             </div>
             <div class="form-group" ng-if="kiosk.mode=='logout'">
