--- a/app/assets/javascripts/visitor_kiosk/view.html
+++ b/app/assets/javascripts/visitor_kiosk/view.html
@@ -132,10 +132,51 @@
         <div ng-if="kiosk.step==5" class="">
           <input ng-keyup="kiosk.find(kiosk.str)" type="text" style="color:#000;padding:30px;font-size:30px;margin-bottom:5px" class="form-control" ng-model="kiosk.str" required="">
           <div class="visitor_name_wrapper" ng-if="kiosk.finder.length>0">
-            <div class="name" ng-repeat="a in kiosk.finder">
+            <div  ng-click="kiosk.visitor_info(a.visitor_id)" class="name" ng-repeat="a in kiosk.finder">
               <h2>{{a.fullname}}</h2>
             </div>
           </div>
 
         </div>
+    </div>
+
+
+
+    <div class="modal fade" id="visitor_info" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+      <div class="modal-dialog" role="document">
+        <div class="modal-content">
+        <form ng-submit="user.create(user.modal)">
+          <div class="modal-header">
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+            <h4 class="modal-title" id="myModalLabel">Visitor Information</h4>
+          </div>
+          <div class="modal-body text-center">
+            <img class="img" ng-src="./secret_upload/{{kiosk.modal.info.image}}" alt="">
+            <h1>{{kiosk.modal.info.fullname}}</h1>
+            <hr>
+            <table class="table table-bordered">
+              <tr>
+                <th colspan="4">History</th>
+              </tr>
+              <tr>
+                <th>Company</th>
+                <th>Staff</th>
+                <th>Purpose</th>
+                <th>Date</th>
+              </tr>
+              <tr ng-repeat="a in kiosk.modal.info.log">
+                <td>{{a.company}}</td>
+                <td>{{a.staff}}</td>
+                <td>{{a.purpose}}</td>
+                <td>{{a.created_at | date:'MMMM dd, yyyy'}}</td>
+              </tr>
+            </table>
+          </div>
+          <div class="modal-footer">
+            <a type="button" class="btn btn-default" data-dismiss="modal">Close</a>
+            <button type="submit" class="btn btn-success">Save</button>
+          </div>
+        </form>
+        </div>
+      </div>
     </div>
