--- a/app/assets/javascripts/login/view.html
+++ b/app/assets/javascripts/login/view.html
@@ -13,7 +13,7 @@
                 </div>
                 <button type="submit" class="btn btn-primary block full-width m-b">Login</button>
 
-                <a href="#"><small>Forgot password?</small></a>
+                <a href="#/forgotpass"><small>Forgot password?</small></a>
             </form>
         </div>
     </div>
