--- a/app/assets/javascripts/visitor_kiosk/view.html
+++ b/app/assets/javascripts/visitor_kiosk/view.html
@@ -95,7 +95,7 @@
         <div ng-if="kiosk.step==4">
             <h4>QR Scanner</h4>
             <video style="width: 400px !important" id="preview"></video>
-            <h3>{{kiosk.qrresult}}</h3>
+
 
             <input
                 type="text"
@@ -141,45 +141,66 @@
         </div>
     </div>
 
-
-
     <div class="modal fade" id="visitor_info" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
       <div class="modal-dialog" role="document">
-        <div class="modal-content">
-        <form ng-submit="user.create(user.modal)">
-          <div class="modal-header">
-            <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-            <h4 class="modal-title" id="myModalLabel">Visitor Information</h4>
-          </div>
-          <div class="modal-body text-center">
-            <img class="img" ng-src="./secret_upload/{{kiosk.modal.info.image}}" alt="">
-            <h1>{{kiosk.modal.info.fullname}}</h1>
-            <hr>
-            <div class="form-group">
-                <select class="form-control"
-                  ng-change="kiosk.getCompanyStaff(kiosk.data.company)"
-                  ng-model="kiosk.data.company"
-                  ng-options="a.id as a.name for a in kiosk.companies">
-                  <option value="" selected disabled hidden>-Select Company-</option>
-                </select>
+        <div class="modal-content" ng-if="kiosk.step==6">
+
+            <div class="modal-header">
+              <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+              <h4 class="modal-title" id="myModalLabel">Visitor Information</h4>
             </div>
-            <div class="form-group">
-                <select class="form-control"
-                  ng-model="kiosk.data.staff"
-                  ng-options="a.id as a.name for a in kiosk.staffs">
-                    <option value="" selected disabled hidden>-Contact Person-</option>
-                </select>
+            <div class="modal-body text-center">
+              <img class="img" ng-src="./secret_upload/{{kiosk.modal.info.image}}" alt="">
+              <h1>{{kiosk.modal.info.fullname}}</h1>
+              <hr>
+              <div class="form-group">
+                  <select class="form-control"
+                    ng-change="kiosk.getCompanyStaff(kiosk.data.company)"
+                    ng-model="kiosk.data.company"
+                    ng-options="a.id as a.name for a in kiosk.companies">
+                    <option value="" selected disabled hidden>-Select Company-</option>
+                  </select>
+              </div>
+              <div class="form-group">
+                  <select class="form-control"
+                    ng-model="kiosk.data.staff"
+                    ng-options="a.id as a.name for a in kiosk.staffs">
+                      <option value="" selected disabled hidden>-Contact Person-</option>
+                  </select>
+              </div>
+              <div class="form-group">
+                  <label>Purpose</label>
+                  <input type="text" class="form-control" ng-model="kiosk.data.purpose">
+              </div>
             </div>
-            <div class="form-group">
-                <label>Purpose</label>
-                <input type="text" class="form-control" ng-model="kiosk.data.purpose">
+            <div class="modal-footer">
+              <a type="button" class="btn btn-default" data-dismiss="modal">Close</a>
+              <button type="button" ng-click="kiosk.linknewId()" class="btn btn-success">NEXT</button>
             </div>
-          </div>
-          <div class="modal-footer">
-            <a type="button" class="btn btn-default" data-dismiss="modal">Close</a>
-            <button type="submit" class="btn btn-success">NEXT</button>
-          </div>
-        </form>
+
+        </div>
+        <div class="modal-content" ng-if="kiosk.step==7">
+
+            <div class="modal-header">
+              <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+              <h4 class="modal-title" id="myModalLabel">Visitor Information</h4>
+            </div>
+            <div class="modal-body text-center">
+              <h4>QR Scanner</h4>
+              <video style="width: 400px !important" id="preview2"></video>
+
+
+              <input
+                  type="text"
+                  style="color:#000;padding:30px;font-size:30px;width:400px;margin:auto"
+                  ng-model="kiosk.data.identifiction_code"
+                  class="form-control" required>
+            </div>
+            <div class="modal-footer">
+              <a type="button" class="btn btn-default" data-dismiss="modal">Close</a>
+              <button type="submit" class="btn btn-success" ng-click="kiosk.reloginVisitor()">LOGIN</button>
+            </div>
+
         </div>
       </div>
     </div>
