added login updates and visitor filter

--- a/app/assets/javascripts/shared/header/view.html
+++ b/app/assets/javascripts/shared/header/view.html
@@ -3,7 +3,7 @@
 		<div class="navbar-header">
     		<a class="navbar-minimalize minimalize-styl-2 btn btn-primary "
 				><i class="fa fa-bars"></i> </a>
-            <p class="navbar-minimalize minimalize-styl-2">PROJECT BRIEF</p>
+            <p class="navbar-minimalize minimalize-styl-2">BisitApp</p>
 		</div>
     	<ul class="nav navbar-top-links navbar-right">
             <!-- <li class="dropdown">
