--- a/app/assets/javascripts/login/view.html
+++ b/app/assets/javascripts/login/view.html
@@ -1,19 +1,20 @@
 <div class="middle-box text-center loginscreen animated fadeInDown">
         <div>
-            <div>
-				<h1 class="logo-name">PB+</h1>
-            </div>
-            <p>Enter your crendentials</p>
-            <form class="m-t" ng-submit="login.user(login.data)">
-                <div class="form-group">
-                    <input type="email" ng-model="login.data.email" class="form-control" placeholder="Email Address" required/>
-                </div>
-                <div class="form-group">
-                    <input type="password" ng-model="login.data.password" class="form-control" placeholder="Password" required/>
-                </div>
-                <button type="submit" class="btn btn-primary block full-width m-b">Login</button>
+            <img height="100" src="./images/bisit_app.png">
+            <div class="loginWrapper">
+                <p>Enter your crendentials</p>
+                <form class="m-t" ng-submit="login.user(login.data)">
+                    <div class="form-group">
+                        <input type="email" ng-model="login.data.email" class="form-control" placeholder="Email Address" required/>
+                    </div>
+                    <div class="form-group">
+                        <input type="password" ng-model="login.data.password" class="form-control" placeholder="Password" required/>
+                    </div>
+                    <button type="submit" class="btn btn-primary block full-width m-b">Login</button>
 
-                <a href="#/forgotpass"><small>Forgot password?</small></a>
-            </form>
+                    <a href="#/forgotpass"><small>Forgot password?</small></a>
+                </form>
+            </div>
+            
         </div>
     </div>
