--- a/app/assets/javascripts/visitor/index/view.html
+++ b/app/assets/javascripts/visitor/index/view.html
@@ -1,5 +1,5 @@
 <div class="wrapper wrapper-content">
-    <div class="row">
+    <!-- <div class="row">
 
         <div class="col-sm-3">
           <div class="ibox float-e-margins">
@@ -49,6 +49,68 @@
           </div>
         </div>
 
+    </div> -->
+    <div class="row">
+      <div class="col-md-12">
+        <div class="ibox float-e-margins">
+            <div class="ibox-title">
+                <h5>Filter</h5>
+            </div>
+            <div class="ibox-content">
+                <div class="row">
+                  <div class="col-md-4">
+                    <div class="form-group">
+                      <label>Visitors Name</label>
+                      <input type="text" class="form-control">
+                    </div>
+                  </div>
+                  <div class="col-md-4">
+                    <div class="form-group">
+                      <label>Date From</label>
+                      <input type="" class="form-control">
+                    </div>
+                  </div>
+                  <div class="col-md-4">
+                    <div class="form-group">
+                      <label>Date To</label>
+                      <input type="" class="form-control">  
+                    </div>
+                  </div>
+                  
+                </div>
+                <div class="row">
+                  <div class="col-md-4">
+                    <div class="form-group">
+                      <label>Facility</label>
+                      <select class="form-control">
+                        <option value="" selected hidden disabled>-Select Facility-</option>
+                      </select>  
+                    </div>
+                  </div>
+                  <div class="col-md-4">
+                    <div class="form-group">
+                      <label>Company</label>
+                      <select class="form-control">
+                        <option value="" selected hidden disabled>-Select Company-</option>
+                      </select>  
+                    </div>
+                  </div>
+                  <div class="col-md-4">
+                    <div class="form-group">
+                      <label>Status</label>
+                      <select class="form-control">
+                        <option value="" selected hidden disabled>-Select Status-</option>
+                      </select>  
+                    </div>
+                  </div>
+                </div>
+                
+            </div>
+            <div class="ibox-footer text-right">
+              <button class="btn btn-primary">Search</button>
+            </div>
+        </div>
+      </div>
     </div>
     <div class="row">
    		<div class="col-md-12">
@@ -71,7 +133,9 @@
     		                    <td class="mail-contact">Company</td>
     		                    <td class="mail-contact">Purpose</td>
     		                    <td class="mail-contact">Contact Person</td>
-    		                    <td class="mail-contact">Status</td>
+                            <td class="mail-contact">Status</td>
+                            <td class="mail-contact">Time In</td>
+                            <td class="mail-contact">Time Out</td>
     		                    <td class="mail-contact">Duration</td>
     		                </tr>
                         <tr ng-click="visitor.info(a.visitor_id)" class="read" ng-repeat="a in visitor.data.visitors">
@@ -81,6 +145,8 @@
     		                    <td class="mail-contact">{{a.purpose}}</td>
     		                    <td class="mail-contact">{{a.staff}}</td>
     		                    <td class="mail-contact">{{(a.time_out) ? 'Logout' : 'On Premise'}}</td>
+                            <td>{{a.created_at | date:'MM/dd/yyyy hh:mm:ss a'}}</td>
+                            <td>{{a.time_out | date:'MM/dd/yyyy hh:mm:ss a'}}</td>
     		                    <td ng-if="!a.elapse" class="mail-contact">{{a.created_at | timeAgo}}</td>
     		                    <td ng-if="a.elapse" class="mail-contact">{{a.elapse}}</td>
     		                </tr>
@@ -124,7 +190,6 @@
       </div>
       <div class="modal-footer">
         <a type="button" class="btn btn-default" data-dismiss="modal">Close</a>
-        <button type="submit" class="btn btn-success">Save</button>
       </div>
     </form>
     </div>
